RanjitaDhruv/src/objects/Offer__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Offer_Amount__c</fullName>
        <description>Special Offers for the item</description>
        <label>Offer Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Propertynew__c</fullName>
        <label>Propertynew</label>
        <referenceTo>Propertynew__c</referenceTo>
        <relationshipName>Offers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Target_Close_Date__c</fullName>
        <description>Closing date</description>
        <label>Target Close Date</label>
        <type>Date</type>
    </fields>
    <label>Offer1</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OF-{0000}</displayFormat>
        <label>Offer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offers1</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>amount_is_100</fullName>
        <active>true</active>
        <errorConditionFormula>Offer_Amount__c  = 100</errorConditionFormula>
        <errorMessage>amount should not be 100</errorMessage>
    </validationRules>
</CustomObject>